package com.iesvdc.demo.modelos;

public enum Rol {
    OPERARIO, CLIENTE, ADMIN
}
